# UPC

./: .gitignore  README.md
1sem/: README.md
1sem/adaptation courses/: README.md
1sem/adaptation courses/01/: 1.cpp  3.cpp
1sem/adaptation courses/02/: 5.cpp  7.cpp
1sem/adaptation courses/03/: 10.cpp  11.cpp  9.cpp
1sem/adaptation courses/04/: 12.cpp  13.cpp  14.cpp
1sem/adaptation courses/05/: 15.cpp  16.cpp  17.cpp
1sem/adaptation courses/06/: 18.cpp  19.cpp
1sem/adaptation courses/07/: 21.cpp  22.cpp  23.cpp
1sem/adaptation courses/08/: 24.cpp  25.cpp  26.cpp
1sem/adaptation courses/09/: 27.cpp  28.cpp  29.cpp
1sem/adaptation courses/1/: 2.cpp  4.cpp
1sem/adaptation courses/10/: 30.cpp  31.cpp  32.cpp
1sem/adaptation courses/11/: 33.cpp  34.cpp  35.cpp
1sem/adaptation courses/2/: 6.cpp
1sem/adaptation courses/6/: 20.cpp
1sem/adaptation courses/8/: 25.cpp
1sem/octave/: README.md
1sem/octave/03/: coin_flip.m  flip_stats.m  main.m  sum_heads.m  wdq.m
1sem/octave/04/: main.m
1sem/octave/05/: alph_redundancy.m  calc_info.m  gen_msg.m  main.m
1sem/octave/06/: main.m  print_num_bin.m  (+3 more)
1sem/programming basics/: README.md
2sem/: README.md
2sem/programming basics/: README.md
2sem/programming basics/21/prac_qt/: CMakeLists.txt  dbmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pract_qt.pro
3sem/: README.md
3sem/data structures and algos/: README.md
4sem/db/: final.sql  lab10.sql  lab11.sql  lab12.sql  lab13.sql  lab2.sql  lab3.sql  lab4.sql  lab5.sql  lab6.sql  lab7.sql  lab8-1.sql  lab8-2.sql  lab9.sql
(+128 files in other folders)
